# SplineTrajectory

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  THIRD_PARTY_NOTICES.md  test_Grad.cpp  test_bc_grad.cpp  test_convex_hull_basis.cpp  test_cost_grad.cpp  test_cubic_spline_vs_minco_nd.cpp  test_ppolyND.cpp  test_quintic_spline_vs_minco_nd.cpp  test_septic_spline_vs_minco_nd.cpp  test_spline_optimizer.cpp  test_with_min_jerk_3d.cpp  test_with_min_snap_3d.cpp
benchmarks/: benchmark_convex_hull_basis.cpp
docs/: convex_hull_basis_zh.md  convex_hull_benchmark.csv  convex_hull_performance_zh.md
examples/: basic_cubic_spline.cpp  convex_hull_optimization_demo.cpp  plot_convex_hull_optimization.py  quintic_spline_comparison.cpp  robot_trajectory_planning.cpp
include/: ConvexHullBasis.hpp  IntegralPointInfo.hpp  SplineOptimizer.hpp  SplineOptimizerProtocols.md  SplineTrajectory.hpp
include/gcopter/: minco.hpp  trajectory.hpp
include/large_scale_traj_optimizer/: traj_min_snap.hpp
